feat: make every plan answer the six approval questions
A plan was a list of edits. Someone approving it could not see what was
being preserved, why it was safe, what would prove it worked, what
happened if it failed, or which claims the planner had actually verified.
Four of the six questions were absent from every pattern; two were
partial.

All five plan skills now emit six numbered sections. The strategy
breakdown lives inside question 1; the phased Java plan keeps its
`## Stage` headings and task blocks at the same level, since the modifier
finds a stage by title and the code reviewer parses the manifest tables.

What was missing and is now specified:

- Skill composition, dependency/version delta and real before/after
  sample transformations (Q1)
- Explicit non-changes and what analysis found but deliberately left
  alone -- the section that stops "while we're here" scope creep (Q2)
- Risk tier with the factor that drove it, a behaviour inventory of every
  endpoint, SQL path, producer/consumer and scheduled job, and a blast
  radius beyond the repo (Q3)
- An evidence plan per behaviour, coverage gaps counted up front, and the
  validation contract -- including that the build loop compiles but never
  runs the tests (Q4)
- Rollback, stated honestly per pattern: Oracle DDL and published Pub/Sub
  messages are not reversible and say so outright, Solr needs a reindex
  to go back. Plus the triggers that stop the run for a person (Q5)
- A confidence register marking each claim verified or inferred*,
  assumptions, and open questions for the SME (Q6)

Skill versions and maturity are declared in SKILL.md frontmatter and the
composition table is computed from disk, because the planner cannot see
the roster, the order or the versions -- a table it wrote itself would be
invented. Everything is 0.1.0/experimental until proven on real repos,
and the table says so where an approver will read it.

Planners now also receive {test_inventory}, which question 4 is answered
fr